--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Open+Sans:wght@300;400;700&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  /* font-family: 'Kaushan Script', cursive; */
+}
+
+body, #__next {
+  height: 100%;
+  background-color: #f9f9f9;
+  color: #404040;
 }
 
 a {
