--- a/pages/cardapio.module.css
+++ b/pages/cardapio.module.css
@@ -46,12 +46,12 @@
 
 .items {
   width: 100%;
-  margin: 16px 0;
+  margin: 32px 0 24px 0;
 }
 
 .item {
   width: 100%;
-  margin: 16px 0;
+  margin: 24px 0;
 }
 
 .recipe {
@@ -75,6 +75,7 @@
 
 .recipe > p {
   grid-column: 2;
+  margin: 8px 0;
   padding: 0 8px;
 }
 
