--- a/pages/cardapio.module.css
+++ b/pages/cardapio.module.css
@@ -72,6 +72,7 @@
 .picture {
   grid-column: 1;
   position: relative;
+  text-align: center;
 }
 
 .picture::after {
@@ -92,7 +93,7 @@
 .recipe > p {
   grid-column: 2;
   margin: 8px 0;
-  padding: 0 8px;
+  padding: 0 0 0 16px;
 }
 
 .portions {
@@ -102,7 +103,7 @@
 
 .portion {
   flex: 1;
-  padding: 0 8px;
+  padding: 0 0 0 16px;
 }
 
 .portion  h3 {
