--- a/pages/cardapio.module.css
+++ b/pages/cardapio.module.css
@@ -163,3 +163,23 @@
 .action img {
   margin-right: 8px;
 }
+
+.overlay {
+  width: 100vw;
+  height: 100vh;
+
+  padding: 32px;
+  overflow: hidden;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  backdrop-filter: blur(8px);
+  background-color: rgba(255, 255, 255, 0.25);
+}
